--- a/heritagesites/templates/heritagesites/base.html
+++ b/heritagesites/templates/heritagesites/base.html
@@ -21,19 +21,22 @@
   <body>
 
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom sticky-top px-4 py-2">
-      <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
-      <div class="row">
+    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom sticky-top px-4 py-2">      <div class="row">
           <a class="navbar-brand" href="{% url 'home' %}">SI664 Heritage Sites</a>
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">about</a>
             </li>
+            <!--
             <li class="nav-item">
               <a class="nav-link" href="{% url 'site' %}">sites</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'country_area' %}">countries/areas</a>
+            </li>
+            -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'filter' %}">sites</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">login</a>
